--- a/regexp_parallel.1
+++ b/regexp_parallel.1
@@ -235,7 +235,7 @@
 1 #"\0"
 0 -1 1 #"\0"
 1 0 -1 -1 -1 -1 -1 -1 0 0 0 0 0 0 0 0 0 1 1 1 200 0 0 0 0 0 -1 -1
-          0 484 0 28 3 12 #"#lang racket"
+          0 517 0 28 3 12 #"#lang racket"
 0 0 24 29 1 #"\n"
 0 0 24 29 1 #"\n"
 0 0 24 3 1 #"("
@@ -544,6 +544,22 @@
 0 0 19 3 7 #"\"space\""
 0 0 24 3 2 #")]"
 0 0 24 29 1 #"\n"
+0 0 24 3 11 #"          ["
+0 0 14 3 4 #"else"
+0 0 24 3 2 #" ("
+0 0 14 3 4 #"list"
+0 0 24 3 2 #" ("
+0 0 14 3 3 #"car"
+0 0 24 3 2 #" ("
+0 0 14 3 12 #"regexp-match"
+0 0 24 3 1 #" "
+0 0 19 3 6 #"#px\".\""
+0 0 24 3 1 #" "
+0 0 14 3 4 #"file"
+0 0 24 3 3 #")) "
+0 0 19 3 9 #"\"unknown\""
+0 0 24 3 2 #")]"
+0 0 24 29 1 #"\n"
 0 0 24 3 13 #"          )])"
 0 0 24 29 1 #"\n"
 0 0 24 3 9 #"        ("
@@ -668,6 +684,21 @@
 0 0 24 3 1 #" "
 0 0 14 3 9 #"all-files"
 0 0 24 3 2 #" ("
+0 0 14 3 3 #"map"
+0 0 24 3 2 #" ("
+0 0 15 3 6 #"lambda"
+0 0 24 3 2 #" ("
+0 0 14 3 8 #"filename"
+0 0 24 3 3 #") ("
+0 0 14 3 13 #"string-append"
+0 0 24 3 1 #" "
+0 0 14 3 12 #"in-file-path"
+0 0 24 3 1 #" "
+0 0 19 3 2 #"\"/"
+0 0 19 3 1 #"\""
+0 0 24 3 1 #" "
+0 0 14 3 8 #"filename"
+0 0 24 3 4 #")) ("
 0 0 14 3 6 #"filter"
 0 0 24 3 1 #" "
 0 0 14 3 8 #"is-json?"
@@ -679,7 +710,7 @@
 0 0 14 3 14 #"directory-list"
 0 0 24 3 1 #" "
 0 0 14 3 12 #"in-file-path"
-0 0 24 3 4 #"))))"
+0 0 24 3 5 #")))))"
 0 0 24 29 1 #"\n"
 0 0 24 3 3 #"  ("
 0 0 14 3 3 #"map"
@@ -711,11 +742,13 @@
 0 0 24 3 1 #" "
 0 0 19 3 1 #"\""
 0 0 19 3 17 #"regexp_site.html\""
-0 0 24 3 3 #") ("
+0 0 24 3 2 #")("
 0 0 14 3 12 #"convert-html"
+0 0 24 3 2 #" ("
+0 0 14 3 13 #"string-append"
 0 0 24 3 1 #" "
 0 0 14 3 12 #"in-file-path"
-0 0 24 3 4 #"))))"
+0 0 24 3 5 #")))))"
 0 0 24 29 1 #"\n"
 0 0 24 3 3 #"  ("
 0 0 14 3 10 #"write-file"
